# RingFinder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
examples/: example_04_large.ovito  example_05_small.ovito
src/RingFinder/: TriangulatePolygonLib.py  TriangulateRing.py  __init__.py
tests/: test_modifier.py
