[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RingFinder"
version = "2023.4"
description = "Finds shortest of bonds in the system"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ovito >= 3.9.1",
]

[project.urls]
repository = "https://github.com/ovito-org/RingFinder"

[project.entry-points.'OVITO.Modifier']
"Ring Finder" = "RingFinder:RingFinder"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]